<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.github.aayman93.recipes.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/findRecipeFragment"
        android:name="com.github.aayman93.recipes.ui.fragments.FindRecipeFragment"
        android:label="@string/title_find_recipe"
        tools:layout="@layout/fragment_find_recipe" />
    <fragment
        android:id="@+id/favouritesFragment"
        android:name="com.github.aayman93.recipes.ui.fragments.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="com.github.aayman93.recipes.ui.fragments.RecipeDetailsFragment"
        android:label="fragment_recipe_details"
        tools:layout="@layout/fragment_recipe_details" />
</navigation>