<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.fragments.FindRecipeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_by_name"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/name" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_by_category"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_by_country"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_by_ingredient"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_ingredient" />
    </com.google.android.material.chip.ChipGroup>

    <FrameLayout
        android:id="@+id/layout_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/chip_group">

        <LinearLayout
            android:id="@+id/layout_find_by_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/input_recipe_name"
                android:text="@string/find_recipes_by_name"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/input_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="2"
                android:minHeight="@dimen/_48sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_find_by_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/spinner_categories"
                android:text="@string/find_recipes_by_category"
                android:textSize="@dimen/_12ssp" />

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:entries="@array/categories_array"
                android:paddingHorizontal="@dimen/_8sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_find_by_country"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/spinner_countries"
                android:text="@string/find_recipes_by_country"
                android:textSize="@dimen/_12ssp" />

            <Spinner
                android:id="@+id/spinner_countries"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:entries="@array/countries_array"
                android:paddingHorizontal="@dimen/_8sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_find_by_main_ingredient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/spinner_ingredients"
                android:text="@string/find_recipes_by_main_ingredient"
                android:textSize="@dimen/_12ssp" />

            <Spinner
                android:id="@+id/spinner_ingredients"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_8sdp" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/search"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/layout_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meals_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:clipToPadding="false"
        android:padding="@dimen/_4sdp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/button_search"
        tools:listitem="@layout/item_meal" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/meals_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/button_search"
        app:layout_constraintVertical_bias=".4" />

    <TextView
        android:id="@+id/tv_empty_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/find_recipes_message"
        android:textAlignment="center"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/button_search"
        app:layout_constraintVertical_bias=".4" />

</androidx.constraintlayout.widget.ConstraintLayout>